# tutorial-pybr

./: LICENSE  Makefile  pyproject.toml
api_pedidos/: api.py  config_logging.py  magalu_api.py
tests/: test_api.py
