[tool.poetry]
name = "projeto_teste_cassio"
version = "0.1.0"
description = ""
authors = ["Denis Guerra <denis.guerra@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
httpx = "^0.20.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpie = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
